# langchain-sample-devcontainer

./: README.md  pyproject.toml  streamlit_app.py
.devcontainer/: Dockerfile  devcontainer.json
